--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,11 @@
+/*
+ * This file is part of nBookmarks.
+ * Copyright (c) 2017 Ilkka Lehtinen
+ *
+ * For the full copyright and license information, please view the license.txt
+ * file that was distributed with this source code.
+ */
+
 .nav-tabs > .active > a, .nav-tabs > .active > a:hover {
   outline:none;
 }
