--- a/static/css/style.css
+++ b/static/css/style.css
@@ -91,6 +91,9 @@ textarea {
     font-family: Consolas, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
     margin-top: -20px;
     resize:vertical;
+    -moz-tab-size : 2;
+      -o-tab-size : 2;
+         tab-size : 2;
 }
 
 textarea.form-control {
@@ -196,6 +199,10 @@ textarea.form-control {
     color: red;
     font-size: 4pt;
     float: right;
+}
+
+#hidden-username {
+  display: none;
 }
 
 :focus {
